@@ -16,13 +16,14 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
+session_start();
 
+require_once ("../../include/config.php");
+require_once ("../../include/functions.php");
+require_once ("../../include/functions_db.php");
 
-require ("include/config.php");
-
-check_login ();
-
-if (! give_acl($config['id_user'], 0, "AR") && ! give_acl ($config['id_user'], 0, "AW")){
+$config["id_user"] = $_SESSION["id_usuario"];
+if (! give_acl ($config['id_user'], 0, "AR") && ! give_acl ($config['id_user'], 0, "AW")) {
 	require ("../../general/noaccess.php");
 	return;
 }
@@ -30,8 +31,8 @@ if (! give_acl($config['id_user'], 0, "AR") && ! give_acl ($config['id_user'], 0
 if (isset ($_GET["agentmodule"]) && isset ($_GET["agent"]) ){
 	$id_agentmodule = $_GET["agentmodule"];
 	$id_agent = $_GET["agent"];
-	$agentmodule_name = dame_nombre_modulo_agentemodulo ($id_agentmodule);
-	if (! give_acl ($config['id_user'], dame_id_grupo ($id_agent), "AR") != 1) {
+	$agentmodule_name = dame_nombre_modulo_agentemodulo($id_agentmodule);
+	if (! give_acl ($config['id_user'], dame_id_grupo ($id_agent), "AR")) {
 		audit_db ($config['id_user'], $REMOTE_ADDR, "ACL Violation",
 			"Trying to access Agent Export Data");
 		require ("../../general/noaccess.php");
@@ -53,14 +54,19 @@ if (isset ($_GET["agentmodule"]) && isset ($_GET["agent"]) ){
 		$to_date = $_GET["to_date"];
 	else
 		$to_date = $now;
-	
+
+	// Convert to unix date	
+	$from_date = date("U", strtotime($from_date));
+	$to_date = date("U", strtotime($to_date));
+
 	// Make the query
 	$sql1="SELECT * FROM tdatos WHERE id_agente = $id_agent AND id_agente_modulo = $id_agentmodule";
 	$tipo = dame_nombre_tipo_modulo(dame_id_tipo_modulo_agentemodulo($id_agentmodule));
+
 	if ($tipo == "generic_data_string")
-		$sql1='SELECT * FROM tagente_datos_string WHERE timestamp > "'.$from_date.'" AND timestamp < "'.$to_date.'" AND id_agente_modulo ='.$id_agentmodule.' ORDER BY timestamp DESC';
+		$sql1 = "SELECT * FROM tagente_datos_string WHERE utimestamp > $from_date AND utimestamp < $to_date AND id_agente_modulo = $id_agentmodule ORDER BY utimestamp DESC";
 	else
-		$sql1='SELECT * FROM tagente_datos WHERE timestamp > "'.$from_date.'" AND timestamp < "'.$to_date.'" AND id_agente_modulo ='.$id_agentmodule.' ORDER BY timestamp DESC';
+		$sql1 = "SELECT * FROM tagente_datos WHERE utimestamp > $from_date AND utimestamp < $to_date AND id_agente_modulo = $id_agentmodule ORDER BY utimestamp DESC";
 	$result1=mysql_query($sql1);
 	
 	// Render data
@@ -69,7 +75,7 @@ if (isset ($_GET["agentmodule"]) && isset ($_GET["agent"]) ){
 		echo ",";
 		echo $row["datos"];
 		echo ",";
-		echo $row["timestamp"];
+		echo $row["utimestamp"];
 		echo chr(13);
 	}
 }
